--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "@types/node": "18.11.15",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
