--- a/sanity_ecommerce/package.json
+++ b/sanity_ecommerce/package.json
@@ -15,6 +15,8 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
