--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@sanity/image-url": "^1.0.1",
     "@types/node": "18.11.15",
     "@types/react-dom": "18.0.9",
+    "canvas-confetti": "^1.6.0",
+    "confetti": "^1.1.6",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
